minimal fixes on fonts and spacing

--- a/week06/homework/main.css
+++ b/week06/homework/main.css
@@ -130,6 +130,9 @@ form {
     line-height: 20pt;
 }
 
+.hour {
+    text-align: center;
+}
 
 textarea {
     font-family: Roboto, sans-serif;
